--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -12,7 +12,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Â· CLPD Â· Chilean Political Landscape Dataset</title>
+    <title>About · CLPD · Chilean Political Landscape Dataset</title>
     <meta name="description" content="Learn about the Chilean Political Landscape Dataset (CPLD): comprehensive district-level electoral data, party system indicators, ENP measures, polarization indices, and disproportionality calculations for Chilean democracy research.">
     <meta name="keywords" content="Chile electoral data methodology, political science research data, ENP calculation, effective number of parties, Laakso Taagepera, Gallagher index, party system research, Chilean democracy data, comparative politics methods, electoral system analysis, district magnitude, seat product model">
     <meta name="author" content="Kenneth Bunker">
@@ -88,7 +88,8 @@
         .logo-text {
             flex: 1;
             display: flex;
-            align-items: center;
+            flex-direction: column;
+            justify-content: space-between;
         }
 
         .nav-tabs {
@@ -116,11 +117,19 @@
             font-weight: 500;
         }
 
-        .tagline {
-            font-size: 1.75rem;
+        .logo {
+            font-family: 'JetBrains Mono', monospace;
+            font-size: 2rem;
+            font-weight: 600;
             color: var(--black);
-            font-weight: 500;
-            letter-spacing: -0.01em;
+            margin-bottom: 0.25rem;
+            letter-spacing: -0.02em;
+        }
+
+        .tagline {
+            font-size: 1rem;
+            color: var(--grey-mid);
+            font-weight: 300;
         }
 
         .page-title {
@@ -217,7 +226,8 @@
                 <div class="logo-container">
                     <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                     <div class="logo-text">
-                        <p class="tagline">Chilean Political Landscape Dataset</p>
+                        <h1 class="logo">CPLD</h1>
+                        <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
                     </div>
                 </div>
             </a>
@@ -228,7 +238,7 @@
                 <span style="margin-left: auto; display: flex; gap: 0.5rem; align-items: center; font-size: 0.85rem;">
                     <span style="color: var(--black); font-weight: 500;">English</span>
                     <span style="color: var(--grey-light);">|</span>
-                    <a href="cpld-about-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">EspaÃ±ol</a>
+                    <a href="cpld-about-es.html" style="color: var(--grey-mid); text-decoration: none; transition: color 0.2s;" onmouseover="this.style.color='var(--blue)'" onmouseout="this.style.color='var(--grey-mid)'">Español</a>
                 </span>
             </nav>
         </header>
@@ -237,11 +247,11 @@
             <h1 class="page-title">About CPLD</h1>
 
             <div class="content">
-                <p>The <strong></p>
+                <p>The <strong>Chilean Political Landscape Dataset (CPLD)</strong> is the first comprehensive longitudinal database of its kind, consolidating district-level electoral outcomes across more than three decades of Chilean democracy, from 1989 to 2024. <strong>Version 1.0</strong> contains 5,301 observations across 42 variables. The dataset is updated regularly to incorporate new electoral results and refined indicators, with future versions expanding coverage as new elections occur.</p>
 
                 <h2 class="section-title">The Data</h2>
                 
-                <p>This dataset addresses a critical gap in Chilean political research. Much of the existing literature relied on national aggregates that obscured underlying dynamicsâ€”variations that district-level data can reveal. The CPLD provides standardized, granular data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics at the subnational level.</p>
+                <p>This dataset addresses a critical gap in Chilean political research. Much of the existing literature relied on national aggregates that obscured underlying dynamics—variations that district-level data can reveal. The CPLD provides standardized, granular data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics at the subnational level.</p>
 
                 <p>By offering consistent, comparable measures across varying numbers of districts (depending on election type: 345 for mayors, 28 for deputies since 2017, 60 for deputies 1989-2013) and 35 years, the CPLD allows researchers to detect patterns invisible in aggregate statistics: the early onset of party system fragmentation, ideological drift at the district level, and asymmetric changes across the political spectrum. This level of detail is essential for understanding how Chile's once-stable democracy evolved through periods of institutional reform and political crisis.</p>
 
@@ -259,7 +269,7 @@
                 <p>The number of districts varies by election type and period: 345 districts for mayoral elections, 28 districts for deputies since 2017, 60 districts for deputies 1989-2013, among other configurations reflecting Chile's evolving electoral geography.</p>
 
                 <div class="highlight-box">
-                    <strong>Current version:</strong> v1.0 Â· <strong>Size:</strong> 1.8MB Â· <strong>Updated:</strong> November 2025 Â· <strong>Future versions:</strong> Will expand as new elections occur
+                    <strong>Current version:</strong> v1.0 · <strong>Size:</strong> 1.8MB · <strong>Updated:</strong> November 2025 · <strong>Future versions:</strong> Will expand as new elections occur
                 </div>
 
                 <h2 class="section-title">Key Variables</h2>
@@ -359,6 +369,6 @@
 
         <footer>
             <p>Kenneth Bunker</p>
-            <p style="margin-top: 0.5rem;">Universidad San SebastiÃ¡n Â· Laboratorio Democracia y Gobierno</p>
-            <p style="margin-top: 1.5rem; font-size: 0.85rem;">Â© 2026 CPLD Â· Licensed under CC BY-NC-ND 4.0</p>
+            <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
+            <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
         </footer> 
