--- a/lun/index.html
+++ b/lun/index.html
@@ -142,7 +142,7 @@
 <img src="/img/lun/20260104.jpeg">
 <img src="/img/lun/20260114.jpeg">
 <img src="/img/lun/20260115.jpeg">
-<img src="/img/lun/blanco.jpeg">
+<img src="/img/lun/20260121.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
 <img src="/img/lun/blanco.jpeg">
