--- a/cpld/cpld-about-es.html
+++ b/cpld/cpld-about-es.html
@@ -61,8 +61,8 @@
         }
 
         header {
-            margin-bottom: 4rem;
-            padding-bottom: 2rem;
+            margin-bottom: 3rem;
+            padding-bottom: 2.5rem;
             border-bottom: 1px solid var(--grey-light);
             margin-top: 2rem;
         }
@@ -70,8 +70,8 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
             transition: opacity 0.2s ease;
         }
 
@@ -80,8 +80,8 @@
         }
 
         .logo-image {
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             flex-shrink: 0;
         }
 
@@ -89,7 +89,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .nav-tabs {
@@ -119,24 +119,29 @@
 
         .logo {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 2rem;
+            font-size: 2.75rem;
             font-weight: 600;
             color: var(--black);
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.5rem;
             letter-spacing: -0.02em;
+            line-height: 1.1;
         }
 
         .tagline {
-            font-size: 1rem;
-            color: var(--grey-mid);
-            font-weight: 300;
+            font-size: 1.1rem;
+            color: var(--grey-dark);
+            font-weight: 400;
+            letter-spacing: -0.01em;
         }
 
         .page-title {
-            font-size: 2.5rem;
-            font-weight: 600;
-            color: var(--black);
-            margin-bottom: 2rem;
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: var(--grey-mid);
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-size: 0.9rem;
+            margin-bottom: 1.5rem;
             letter-spacing: -0.02em;
         }
 
@@ -209,7 +214,20 @@
             }
 
             .logo {
-                font-size: 2rem;
+                font-size: 1.75rem;
+
+            .logo-image {
+                width: 60px;
+                height: 60px;
+            }
+
+            .tagline {
+                font-size: 0.95rem;
+            }
+
+            .page-title {
+                font-size: 0.8rem;
+            }
             }
 
             .page-title {
@@ -226,8 +244,8 @@
                 <div class="logo-container">
                     <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                     <div class="logo-text">
-                        <h1 class="logo">CPLD</h1>
-                        <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+                        <h1 class="logo">Chilean Political Landscape Dataset</h1>
+                        <p class="tagline">Indicadores electorales y de sistema de partidos a nivel distrital</p>
                     </div>
                 </div>
             </a>
@@ -251,9 +269,9 @@
 
                 <h2 class="section-title">Los Datos</h2>
                 
-                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basó en agregados nacionales que oscurecían dinámicas subyacentes—variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
+                <p>Este dataset aborda una brecha crítica en la investigación política chilena. Gran parte de la literatura existente se basÃ³ en agregados nacionales que oscurecían dinámicas subyacentesâ€”variaciones que los datos a nivel distrital pueden revelar. El CPLD proporciona datos estandarizados y granulares que permiten un análisis más matizado de la evolución del sistema de partidos, reformas institucionales y dinámicas electorales a nivel subnacional.</p>
 
-                <p>Al ofrecer medidas consistentes y comparables en un número variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideológico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cómo la democracia chilena, alguna vez estable, evolucionó a través de períodos de reforma institucional y crisis política.</p>
+                <p>Al ofrecer medidas consistentes y comparables en un nÃºmero variable de distritos (dependiendo del tipo de elección: 345 para alcaldes, 28 para diputados desde 2017, 60 para diputados 1989-2013) y 35 años, el CPLD permite a los investigadores detectar patrones invisibles en las estadísticas agregadas: el inicio temprano de la fragmentación del sistema de partidos, el desplazamiento ideolÃ³gico a nivel distrital y cambios asimétricos en todo el espectro político. Este nivel de detalle es esencial para comprender cÃ³mo la democracia chilena, alguna vez estable, evolucionÃ³ a través de períodos de reforma institucional y crisis política.</p>
 
                 <h2 class="section-title">Alcance de la base de datos</h2>
 
@@ -266,7 +284,7 @@
                     <li><strong>Convenciones Constitucionales:</strong> Constituyentes (2022 y 2023)</li>
                 </ul>
 
-                <p>El número de distritos varía según el tipo de elección y período: 345 distritos para elecciones de alcaldes, 28 distritos para diputados desde 2017, 60 distritos para diputados 1989-2013, entre otras configuraciones que reflejan la geografía electoral evolutiva de Chile.</p>
+                <p>El nÃºmero de distritos varía segÃºn el tipo de elección y período: 345 distritos para elecciones de alcaldes, 28 distritos para diputados desde 2017, 60 distritos para diputados 1989-2013, entre otras configuraciones que reflejan la geografía electoral evolutiva de Chile.</p>
 
                 <div class="highlight-box">
                     <strong>Versión actual:</strong> v1.0 · <strong>Tamaño:</strong> 1,8MB · <strong>Actualizado:</strong> Noviembre 2025 · <strong>Versiones futuras:</strong> Se expandirán a medida que ocurran nuevas elecciones
@@ -280,26 +298,26 @@
                 <ul>
                     <li>Tipo de elección, sistema electoral, características distritales</li>
                     <li>Magnitud de distrito (dm), tamaño de asamblea (as), producto de escaños (sp)</li>
-                    <li>Número de listas, candidatos y candidatos independientes</li>
+                    <li>NÃºmero de listas, candidatos y candidatos independientes</li>
                 </ul>
 
                 <p><strong>Indicadores del Sistema de Partidos:</strong></p>
                 <ul>
-                    <li>Número efectivo de partidos por votos (enpv) y escaños (enps)</li>
+                    <li>NÃºmero efectivo de partidos por votos (enpv) y escaños (enps)</li>
                     <li>Medidas NEP a nivel distrital y nacional</li>
-                    <li>Índices de nacionalización del sistema de partidos (Mainwaring-Jones, Chhibber-Kollman)</li>
+                    <li>Ãndices de nacionalización del sistema de partidos (Mainwaring-Jones, Chhibber-Kollman)</li>
                 </ul>
 
-                <p><strong>Índices de Desproporcionalidad:</strong></p>
+                <p><strong>Ãndices de Desproporcionalidad:</strong></p>
                 <ul>
                     <li>Rae, Loosemore-Hanby, Lijphart I & II</li>
-                    <li>Índices Gallagher, Cox-Shugart</li>
+                    <li>Ãndices Gallagher, Cox-Shugart</li>
                 </ul>
 
-                <p><strong>Medidas Ideológicas:</strong></p>
+                <p><strong>Medidas IdeolÃ³gicas:</strong></p>
                 <ul>
-                    <li>Índices de polarización (Dalton) a nivel distrital y nacional</li>
-                    <li>Posición ideológica promedio (av_id)</li>
+                    <li>Ãndices de polarización (Dalton) a nivel distrital y nacional</li>
+                    <li>Posición ideolÃ³gica promedio (av_id)</li>
                     <li>Porcentajes de votos mínimos y máximos por lista</li>
                 </ul>
 
@@ -308,7 +326,7 @@
                     <li>Fraccionamiento étnico (ethnic_frac)</li>
                     <li>Porcentajes de población indígena (ethnic_number, ethnic_presence)</li>
                     <li>Votos válidos como proxy del tamaño del distrito</li>
-                    <li>Número de subunidades (comunas) dentro de los distritos</li>
+                    <li>NÃºmero de subunidades (comunas) dentro de los distritos</li>
                 </ul>
 
                 <h2 class="section-title">Aplicaciones de Investigación</h2>
@@ -317,7 +335,7 @@
 
                 <ul>
                     <li>Examinar el momento y los patrones de fragmentación del sistema de partidos</li>
-                    <li>Analizar la reestructuración ideológica a nivel distrital</li>
+                    <li>Analizar la reestructuración ideolÃ³gica a nivel distrital</li>
                     <li>Evaluar el impacto de las reformas electorales (particularmente la reforma de 2015)</li>
                     <li>Estudiar la fragmentación asimétrica en el espectro político</li>
                     <li>Investigar la relación entre diversidad social y resultados electorales</li>
@@ -330,8 +348,8 @@
                 <p>La investigación usando el CPLD ha revelado conocimientos importantes que desafían la sabiduría convencional:</p>
 
                 <ul>
-                    <li><strong>La fragmentación comenzó antes de lo pensado:</strong> La evidencia a nivel distrital muestra que la fragmentación del sistema de partidos estaba en marcha en 2009, mucho antes de la reforma electoral de 2015</li>
-                    <li><strong>Desplazamiento ideológico:</strong> El sistema de partidos ha experimentado un giro gradual hacia la izquierda a nivel distrital, no capturado por agregados nacionales</li>
+                    <li><strong>La fragmentación comenzÃ³ antes de lo pensado:</strong> La evidencia a nivel distrital muestra que la fragmentación del sistema de partidos estaba en marcha en 2009, mucho antes de la reforma electoral de 2015</li>
+                    <li><strong>Desplazamiento ideolÃ³gico:</strong> El sistema de partidos ha experimentado un giro gradual hacia la izquierda a nivel distrital, no capturado por agregados nacionales</li>
                     <li><strong>Fragmentación asimétrica:</strong> La fragmentación se ha concentrado desproporcionadamente en la izquierda, con más partidos pero más pequeños en comparación con la derecha</li>
                 </ul>
 
@@ -342,14 +360,14 @@
                 <p>Todas las medidas siguen estándares establecidos de política comparada con la atribución apropiada:</p>
                 <ul>
                     <li><strong>Cálculos NEP:</strong> Laakso & Taagepera (1979)</li>
-                    <li><strong>Índices de desproporcionalidad:</strong> Rae (1967), Loosemore & Hanby (1971), Gallagher (1991), Cox & Shugart (1991), Lijphart (1990, 1994)</li>
+                    <li><strong>Ãndices de desproporcionalidad:</strong> Rae (1967), Loosemore & Hanby (1971), Gallagher (1991), Cox & Shugart (1991), Lijphart (1990, 1994)</li>
                     <li><strong>Polarización:</strong> Dalton (2008)</li>
                     <li><strong>Nacionalización:</strong> Jones & Mainwaring (2003), Chhibber & Kollman (2004)</li>
-                    <li><strong>Posiciones ideológicas:</strong> Bunker (2025)</li>
+                    <li><strong>Posiciones ideolÃ³gicas:</strong> Bunker (2025)</li>
                     <li><strong>Fraccionamiento étnico:</strong> Alesina et al. (2003), datos del Censo chileno (2002, 2017)</li>
                 </ul>
 
-                <p>La estructura de la base de datos permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros históricos y están documentados en el libro de códigos.</p>
+                <p>La estructura de la base de datos permite modelado jerárquico, análisis espacial y análisis de series temporales transversales. Los valores faltantes (NA) reflejan la falta de disponibilidad genuina de datos en registros histÃ³ricos y están documentados en el libro de cÃ³digos.</p>
 
                 <h2 class="section-title">Citación</h2>
 
