--- a/cpld/cpld-contact-es.html
+++ b/cpld/cpld-contact-es.html
@@ -61,8 +61,8 @@
         }
 
         header {
-            margin-bottom: 4rem;
-            padding-bottom: 2rem;
+            margin-bottom: 3rem;
+            padding-bottom: 2.5rem;
             border-bottom: 1px solid var(--grey-light);
             margin-top: 2rem;
         }
@@ -70,8 +70,8 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
             transition: opacity 0.2s ease;
         }
 
@@ -80,8 +80,8 @@
         }
 
         .logo-image {
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             flex-shrink: 0;
         }
 
@@ -89,7 +89,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .nav-tabs {
@@ -119,24 +119,29 @@
 
         .logo {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 2rem;
+            font-size: 2.75rem;
             font-weight: 600;
             color: var(--black);
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.5rem;
             letter-spacing: -0.02em;
+            line-height: 1.1;
         }
 
         .tagline {
-            font-size: 1rem;
-            color: var(--grey-mid);
-            font-weight: 300;
+            font-size: 1.1rem;
+            color: var(--grey-dark);
+            font-weight: 400;
+            letter-spacing: -0.01em;
         }
 
         .page-title {
-            font-size: 2.5rem;
-            font-weight: 600;
-            color: var(--black);
-            margin-bottom: 2rem;
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: var(--grey-mid);
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-size: 0.9rem;
+            margin-bottom: 1.5rem;
             letter-spacing: -0.02em;
         }
 
@@ -236,7 +241,20 @@
             }
 
             .logo {
-                font-size: 2rem;
+                font-size: 1.75rem;
+
+            .logo-image {
+                width: 60px;
+                height: 60px;
+            }
+
+            .tagline {
+                font-size: 0.95rem;
+            }
+
+            .page-title {
+                font-size: 0.8rem;
+            }
             }
 
             .page-title {
@@ -257,8 +275,8 @@
                 <div class="logo-container">
                     <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                     <div class="logo-text">
-                        <h1 class="logo">CPLD</h1>
-                        <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+                        <h1 class="logo">Chilean Political Landscape Dataset</h1>
+                        <p class="tagline">Indicadores electorales y de sistema de partidos a nivel distrital</p>
                     </div>
                 </div>
             </a>
@@ -301,7 +319,7 @@
 
             <div class="info-box">
                 <h3>Colaboración en Investigación</h3>
-                <p>¿Interesado en colaborar en investigación usando el CPLD? Damos la bienvenida a consultas sobre proyectos conjuntos, oportunidades de coautoría y extensiones de datos.</p>
+                <p>Â¿Interesado en colaborar en investigación usando el CPLD? Damos la bienvenida a consultas sobre proyectos conjuntos, oportunidades de coautoría y extensiones de datos.</p>
                 <p>Por favor incluya una breve descripción de sus intereses de investigación y la colaboración propuesta.</p>
             </div>
 
