--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -61,8 +61,8 @@
         }
 
         header {
-            margin-bottom: 4rem;
-            padding-bottom: 2rem;
+            margin-bottom: 3rem;
+            padding-bottom: 2.5rem;
             border-bottom: 1px solid var(--grey-light);
             margin-top: 2rem;
         }
@@ -70,8 +70,8 @@
         .logo-container {
             display: flex;
             align-items: center;
-            gap: 1rem;
-            margin-bottom: 1.5rem;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
             transition: opacity 0.2s ease;
         }
 
@@ -80,8 +80,8 @@
         }
 
         .logo-image {
-            width: 60px;
-            height: 60px;
+            width: 80px;
+            height: 80px;
             flex-shrink: 0;
         }
 
@@ -89,7 +89,7 @@
             flex: 1;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            justify-content: center;
         }
 
         .nav-tabs {
@@ -119,24 +119,29 @@
 
         .logo {
             font-family: 'JetBrains Mono', monospace;
-            font-size: 2rem;
+            font-size: 2.75rem;
             font-weight: 600;
             color: var(--black);
-            margin-bottom: 0.25rem;
+            margin-bottom: 0.5rem;
             letter-spacing: -0.02em;
+            line-height: 1.1;
         }
 
         .tagline {
-            font-size: 1rem;
-            color: var(--grey-mid);
-            font-weight: 300;
+            font-size: 1.1rem;
+            color: var(--grey-dark);
+            font-weight: 400;
+            letter-spacing: -0.01em;
         }
 
         .page-title {
-            font-size: 2.5rem;
-            font-weight: 600;
-            color: var(--black);
-            margin-bottom: 2rem;
+            font-size: 1.5rem;
+            font-weight: 500;
+            color: var(--grey-mid);
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            font-size: 0.9rem;
+            margin-bottom: 1.5rem;
             letter-spacing: -0.02em;
         }
 
@@ -209,7 +214,20 @@
             }
 
             .logo {
-                font-size: 2rem;
+                font-size: 1.75rem;
+
+            .logo-image {
+                width: 60px;
+                height: 60px;
+            }
+
+            .tagline {
+                font-size: 0.95rem;
+            }
+
+            .page-title {
+                font-size: 0.8rem;
+            }
             }
 
             .page-title {
@@ -226,8 +244,8 @@
                 <div class="logo-container">
                     <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                     <div class="logo-text">
-                        <h1 class="logo">CPLD</h1>
-                        <p class="tagline">Chilean Political Landscape Dataset · 1989—2024</p>
+                        <h1 class="logo">Chilean Political Landscape Dataset</h1>
+                        <p class="tagline">District-level electoral and party system indicators</p>
                     </div>
                 </div>
             </a>
@@ -251,7 +269,7 @@
 
                 <h2 class="section-title">The Data</h2>
                 
-                <p>This dataset addresses a critical gap in Chilean political research. Much of the existing literature relied on national aggregates that obscured underlying dynamics—variations that district-level data can reveal. The CPLD provides standardized, granular data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics at the subnational level.</p>
+                <p>This dataset addresses a critical gap in Chilean political research. Much of the existing literature relied on national aggregates that obscured underlying dynamicsâ€”variations that district-level data can reveal. The CPLD provides standardized, granular data that enables more nuanced analysis of party system evolution, institutional reforms, and electoral dynamics at the subnational level.</p>
 
                 <p>By offering consistent, comparable measures across varying numbers of districts (depending on election type: 345 for mayors, 28 for deputies since 2017, 60 for deputies 1989-2013) and 35 years, the CPLD allows researchers to detect patterns invisible in aggregate statistics: the early onset of party system fragmentation, ideological drift at the district level, and asymmetric changes across the political spectrum. This level of detail is essential for understanding how Chile's once-stable democracy evolved through periods of institutional reform and political crisis.</p>
 
