--- a/cpld/index-es.html
+++ b/cpld/index-es.html
@@ -92,6 +92,7 @@
             color: var(--black);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
+            padding-top: 2rem;
         }
 
         .container {
