--- a/cpld/index.html
+++ b/cpld/index.html
@@ -92,6 +92,7 @@
             color: var(--black);
             line-height: 1.6;
             -webkit-font-smoothing: antialiased;
+            padding-top: 2rem;
         }
 
         .container {
@@ -473,7 +474,7 @@
             <div class="logo-container">
                 <img src="logo.svg" alt="CPLD Logo" class="logo-image">
                 <div class="logo-text">
-                    <h1 class="logo">CPLD</h1>
+                    <h1 class="logo">Chilean Political Landscape Dataset</h1>
                     <p class="tagline">Chilean Political Landscape Dataset · 1989â€”2024</p>
                 </div>
             </div>
