--- a/cpld/cpld-about.html
+++ b/cpld/cpld-about.html
@@ -231,7 +231,7 @@
             }
 
             .page-title {
-                font-size: 2rem;
+                font-size: 2.25rem;
             }
         }
     </style>
@@ -389,4 +389,5 @@
             <p>Kenneth Bunker</p>
             <p style="margin-top: 0.5rem;">Universidad San Sebastián · Laboratorio Democracia y Gobierno</p>
             <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licensed under CC BY-NC-ND 4.0</p>
-        </footer> 
+        </footer>
+            padding-top: 2rem;
