--- a/cpld/cpld-contact.html
+++ b/cpld/cpld-contact.html
@@ -258,7 +258,7 @@
             }
 
             .page-title {
-                font-size: 2rem;
+                font-size: 2.25rem;
             }
 
             .contact-grid {
@@ -340,3 +340,4 @@
         <footer>
             <p>Kenneth Bunker</p>
             <p style="m
+            padding-top: 2rem;
