--- a/cpld/cpld-contact-es.html
+++ b/cpld/cpld-contact-es.html
@@ -258,7 +258,7 @@
             }
 
             .page-title {
-                font-size: 2rem;
+                font-size: 2.25rem;
             }
 
             .contact-grid {
@@ -343,4 +343,5 @@
             <p style="margin-top: 1.5rem; font-size: 0.85rem;">© 2026 CPLD · Licenciado bajo CC BY-NC-ND 4.0</p>
         </footer>
 
- 
+
+            padding-top: 2rem;
